# kvstor

./: .gitignore  CMakeLists.txt  LICENSE.MIT  LICENSE.md  README.md
.github/workflows/: ccpp.yml  linux.yml  macos.yml  windows.yml
include/: kvstor.h
tests/: CMakeLists.txt  kvstor_test.cpp
